# modad

./: .gitignore  README.md  example_config.yml  main.py  pyproject.toml  setup.py
modad/: assembler.py  cli.py  config.py  dissembler.py  parser.py  state.py  utils.py
src/: assembler.py  dissembler.py  state.py
